# espacio_industrias

./: Cargo.toml  Dioxus.toml
docs/: 404.html
docs/assets/: product_space_mexico-305cf986049a1555.js  product_space_mexico-305cf986049a1555.js.br  product_space_mexico-9a473db910adc1f2.js  product_space_mexico-9a473db910adc1f2.js.br  product_space_mexico-a9a116fd941f3f02.js  product_space_mexico-a9a116fd941f3f02.js.br  product_space_mexico_bg-1444078c5ecc5518.wasm  product_space_mexico_bg-1444078c5ecc5518.wasm.br  product_space_mexico_bg-3e8ca79cd863c1f6.wasm  product_space_mexico_bg-3e8ca79cd863c1f6.wasm.br  product_space_mexico_bg-4142b7947650fde2.wasm  product_space_mexico_bg-4142b7947650fde2.wasm.br
src/: categories.csv  construye_espacio_industrias.py  espacio_producto.json  espacio_producto_format.json  links.csv  main.rs  nodes.csv
